--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,14 @@
 /* Variables */
-
+$primary-color: #cb1518;
+$successColor: #99cc00;
+$btnPrimaryColor: #1764e4;
+$btnDangerColor: #ec3f4f;
+$tablebtnPrimaryColor: #3577e8;
+$tablebtnDangerColor: #e52d3e;
+$bigScreenColor: #ff3e34;
+$bigScreenTabColor: #ff5552;
+$bigScreenDangerColor: #ff9d3c;
+$bigScreenBimColor: #fa6259;
 // Base color
 $blue:#324157;
 $light-blue:#3A71A8;
