--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,10 +10,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  a{
+    color:#1890ff;
+  }
 }
-
+*{
+  @include scrollbar;
+}
 html {
   height: 100%;
+  box-sizing: border-box;
 }
 
 #app {
@@ -45,7 +51,7 @@ div:focus {
 label {
   font-weight: 700;
 }
-
+// main-container global css
 .app-container {
   padding: 20px;
 }
@@ -55,6 +61,18 @@ label {
   position: relative;
 }
 
+.app-main {
+  height: calc(100vh - 60px);
+  overflow-y: auto;
+  background-color: #F0F2F5;
+}
+.app-main > .container {
+  margin: 15px;
+  padding: 10px 15px;
+  background-color: #fff;
+  border-radius: 6px;
+  min-height: calc(100vh - 90px);
+}
 // Refine element ui upload
 .upload-container {
   .el-upload {
@@ -153,4 +171,111 @@ aside {
 
 .no-padding {
   padding: 0px !important;
+}
+
+// 按钮在vxe-table表格里的时候，去掉padding，使表格更紧凑
+.vxe-select--panel {
+  z-index: 9997 !important
+}
+.vxe-cell{
+  .button-link + .el-button,
+  .button-link + .button-link,
+  .el-button + .button-link,
+  .el-button + .el-button
+  {
+    margin-left: 8px;
+  }
+}
+.list-complete-item {
+  transition: all .5s;
+}
+
+.list-complete-enter, .list-complete-leave-to
+  /* .list-complete-leave-active for below version 2.1.8 */
+{
+  opacity: 0;
+  transform: translateY(30px);
+}
+
+.list-complete-leave-active {
+  position: absolute;
+}
+
+.highlight {
+  color: #e02222;
+}
+
+.tac{
+  text-align: center;
+}
+
+.el-form{
+  h3 {
+    width: 100%;
+    font-weight: bold;
+    font-size: 16px;
+  }
+}
+
+div .ant-select-dropdown {
+  z-index: 9999;
+}
+
+.el-form.colon{
+.el-form-item__label{
+  &::after{
+    content:':';
+    display: inline-block;
+    margin-left: 3px;
+  }
+}
+}
+
+.el-dropdown-menu__item{
+  >a{
+    color:#606266
+  }
+}
+.el-form-item__content{
+  color: #606266;
+  >span{
+    color:#000;
+  }
+}
+
+.text-primary{
+  color: $primary-color
+}
+.text-success{
+  color: $successColor
+}
+
+
+body .empty {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+  user-select: none;
+  .svg-icon {
+    width: 80px;
+    height: 80px;
+  }
+  p {
+    margin-top: 0;
+    font-size: 15px;
+    color: #999;
+  }
+}
+
+.vxe-table--tooltip-wrapper{
+  z-index: 9999 !important;
+}
+.el-image-viewer__wrapper{
+  z-index: 9999 !important;
+}
+.el-dialog{
+  max-width: 90%;
 }
